# OpenFace

./: .gitmodules  CMakeLists.txt
exe/FeatureExtractionPython/: CMakeLists.txt  FeatureExtractionPython.cpp  example.py
lib/local/FaceAnalyser/: CMakeLists.txt
lib/local/GazeAnalyser/: CMakeLists.txt
lib/local/LandmarkDetector/: CMakeLists.txt
lib/local/LandmarkDetector/src/: LandmarkDetectorFunc.cpp  Patch_experts.cpp
lib/local/Utilities/: CMakeLists.txt
lib/local/Utilities/src/: ImageCapture.cpp  SequenceCapture.cpp
